# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: linter.yml  my_tests.yml
page_analyzer/: __init__.py  app.py  http.py  models.py  views.py
page_analyzer/models/: db.py  db_engine.py  models.py
page_analyzer/templates/: 404.html  index.html
page_analyzer/templates/css/: main.css
page_analyzer/templates/urls/: index.html  url_check.html
tests/: test_app.py
tests/github_tests_data/: db_for_github.sql
tests/test_data/: db_test.py  http_test.py
